sec_group.tf
#SECURITY GROUP
resource "aws_security_group" "jyo-security" {
    vpc_id = "${aws_vpc.jyo-vpc.id}"
    
    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
     
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags =  {
        Name = "jyo-security"
        Owner = "jyoti.pandey@cloudeq.com"
        Purpose = "training"
    }
}
